# gobley

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_wanted.md
.github/workflows/: dependency-image.Dockerfile  dependency-image.yml  deploy-docs.yml  pr-build-test-cargo-tests.ps1  pr-build-test-change-file-owner.ps1  (+10 more)
bindgen/: Cargo.toml
bindgen/src/: lib.rs  main.rs
bindgen/src/gen_kotlin_multiplatform/: compounds.rs  enum_.rs  mod.rs  primitives.rs
bindgen/src/templates/: macros.kt
bindgen/src/templates/android+jvm/: Async.kt  CallbackInterfaceImpl.kt  CallbackInterfaceTemplate.kt  ExternalTypeTemplate.kt  HandleMap.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  PointerHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/common/: Async.kt  CallbackInterfaceImpl.kt  CustomTypeTemplate.kt  EnumTemplate.kt  ErrorTemplate.kt  Helpers.kt  Interface.kt  NamespaceLibraryTemplate.kt  ObjectTemplate.kt  RecordTemplate.kt  RustBufferTemplate.kt  TopLevelFunctionTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/ffi/: Async.kt  BooleanHelper.kt  ByteArrayHelper.kt  ByteBuffer.kt  CallbackInterfaceRuntime.kt  CustomTypeTemplate.kt  DurationHelper.kt  EnumTemplate.kt  ErrorTemplate.kt  FfiConverterTemplate.kt  Float32Helper.kt  Float64Helper.kt  Int16Helper.kt  Int32Helper.kt  Int64Helper.kt  Int8Helper.kt  MapTemplate.kt  ObjectCleanerHelper.kt  ObjectTemplate.kt  OptionalTemplate.kt  RecordTemplate.kt  RustBufferTemplate.kt  SequenceTemplate.kt  StringHelper.kt  TopLevelFunctionTemplate.kt  UInt16Helper.kt  UInt32Helper.kt  UInt64Helper.kt  UInt8Helper.kt
bindgen/src/templates/headers/: ExternalTypeTemplate.h  Types.h  wrapper.h
bindgen/src/templates/jvm/: Async.kt  RustBufferTemplate.kt  Types.kt
bindgen/src/templates/native/: Async.kt  ByteBuffer.kt  CallbackInterfaceImpl.kt  ExternalTypeTemplate.kt  HandleMap.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  PointerHelper.kt  ReferenceHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/stub/: ObjectTemplate.kt  TopLevelFunctionTemplate.kt  Types.kt  wrapper.kt
build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/audio-cpp-app/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/audio-cpp-app/ios/Config/: Config.xcconfig
examples/audio-cpp-app/src/androidMain/: AndroidManifest.xml
examples/audio-cpp-app/src/androidMain/kotlin/: MainActivity.kt
examples/audio-cpp-app/src/commonMain/kotlin/: AudioCppApp.kt
examples/audio-cpp-app/src/iosMain/kotlin/: AudioCppAppUIViewController.kt
examples/custom-types/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/custom-types/src/: custom-types.udl
examples/custom-types/src/commonTest/kotlin/: CustomTypesTest.kt
examples/todolist/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/todolist/src/commonTest/kotlin/: TodoListTest.kt
examples/tokio-blake3-app/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/tokio-blake3-app/ios/Config/: Config.xcconfig
examples/tokio-blake3-app/src/androidMain/: AndroidManifest.xml
examples/tokio-blake3-app/src/androidMain/kotlin/: MainActivity.kt
examples/tokio-blake3-app/src/commonMain/kotlin/: TokioBlake3App.kt
examples/tokio-blake3-app/src/commonMain/rust/: lib.rs
examples/tokio-blake3-app/src/iosMain/kotlin/: TokioBlake3AppUIViewController.kt
gradle/: libs.versions.toml
tests/ext-types/ext-types-proc-macro/uniffi/: Cargo.toml
tests/ext-types/ext-types/uniffi/: Cargo.toml
tests/futures/uniffi/: Cargo.toml
tests/uniffi/callbacks/: Cargo.toml
tests/uniffi/callbacks/src/commonMain/rust/: lib.rs
tests/uniffi/chronological/: Cargo.toml
tests/uniffi/chronological/src/commonTest/kotlin/: ChronologicalTest.kt
tests/uniffi/chronological/src/jvmTest/kotlin/: ChronologicalTest.jvm.kt
tests/uniffi/chronological/src/linuxTest/kotlin/: ChronologicalTest.linux.kt
tests/uniffi/chronological/src/mingwTest/kotlin/: ChronologicalTest.mingw.kt
tests/uniffi/coverall/: Cargo.toml  build.gradle.kts
tests/uniffi/coverall-jvm/: Cargo.toml  build.gradle.kts  build.rs
tests/uniffi/coverall-jvm/src/: coverall-jvm.udl
tests/uniffi/coverall-jvm/src/main/rust/: additional.rs  lib.rs
tests/uniffi/coverall-jvm/src/test/kotlin/: CoverallTest.kt
tests/uniffi/coverall/src/commonMain/rust/: lib.rs
tests/uniffi/coverall/src/commonTest/kotlin/: AdditionalCoverallTest.kt  CoverallTest.kt
tests/uniffi/coverall/src/jsTest/kotlin/: CoverallTest.js.kt
tests/uniffi/coverall/src/jvmTest/kotlin/: CoverallTest.jvm.kt
tests/uniffi/coverall/src/nativeTest/kotlin/: CoverallTest.native.kt
tests/uniffi/docstring-proc-macro/: Cargo.toml
tests/uniffi/enum-types/: Cargo.toml  uniffi.toml
tests/uniffi/enum-types/src/commonTest/kotlin/: EnumTypesTest.kt
tests/uniffi/enum-types/src/jvmTest/kotlin/: EnumTypesReflectionTest.jvm.kt
tests/uniffi/error-types/: Cargo.toml
tests/uniffi/ext-types/custom-types/: Cargo.toml  build.gradle.kts
tests/uniffi/ext-types/custom-types/src/: custom-types.udl
tests/uniffi/ext-types/ext-types/: Cargo.toml  build.gradle.kts
tests/uniffi/ext-types/ext-types/src/: ext-types.udl
tests/uniffi/ext-types/ext-types/src/commonMain/rust/: lib.rs
tests/uniffi/ext-types/ext-types/src/commonTest/kotlin/: ExtTypesTest.kt
tests/uniffi/ext-types/http-headermap/: Cargo.toml
tests/uniffi/ext-types/sub-lib/: Cargo.toml  build.gradle.kts
tests/uniffi/ext-types/sub-lib/src/commonMain/rust/: lib.rs
tests/uniffi/ext-types/uniffi-one/: Cargo.toml  build.gradle.kts
tests/uniffi/ext-types/uniffi-one/src/: uniffi-one.udl
tests/uniffi/keywords/: Cargo.toml
tests/uniffi/keywords/src/commonMain/rust/: lib.rs
tests/uniffi/simple-fns/: Cargo.toml
tests/uniffi/struct-default-values/: Cargo.toml
(+393 files in other folders)
