[package]
name = "gobley-uniffi-bindgen"
version = "0.2.0"
edition = "2021"
authors = ["Gobley Contributors"]
description = "A UniFFI Kotlin Multiplatform bindings generator for Rust"
documentation = "https://github.com/gobley/gobley"
homepage = "https://github.com/gobley/gobley"
repository = "https://github.com/gobley/gobley"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["ffi", "bindgen", "kotlin"]

[[bin]]
name = "gobley-uniffi-bindgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { version = "0.12.1", default-features = false, features = ["config"] }
camino = { workspace = true }
clap = { version = "4.5.7", features = ["derive", "cargo", "std"] }
fs-err = "2.11.0"
heck = "0.5.0"
paste = "1.0.15"
serde = "1.0.203"
textwrap = "0.16.1"
toml = "0.5"
uniffi_bindgen = { workspace = true }
uniffi_meta = { workspace = true }
# TODO: Remove the following after upgrading MSRV to 1.78. cargo-platform 0.1.9 does not support 1.77 or older.
cargo-platform = "=0.1.8"
