[package]
name = "gobley-example-tokio-blake3-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_example_tokio_blake3_app"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true, features = ["tokio"] }
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
blake3 = "1"
