[package]
name = "gobley-fixture-docstring-proc-macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_docstring_proc_macro"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../build-common" }
