[package]
name = "gobley-fixture-error-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_error_types"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
anyhow = { workspace = true }
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../build-common" }
