[package]
name = "gobley-fixture-struct-default-values"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_struct_default_values"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../build-common" }
