[package]
name = "gobley-fixture-ext-types-custom-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# The name of this library is `ext_types_custom` in upstream. Add the kmm_
# prefix here to prevent potential name conflict when UniFFI tries to find the
# target by its name.
name = "kmm_ext_types_custom"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../../build-common" }
