[package]
name = "gobley-fixture-ext-types-sub-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_ext_types_sub_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
gobley-fixture-ext-types-uniffi-one = { path = "../uniffi-one" }

[build-dependencies]
gobley-fixture-build-common = { path = "../../../build-common" }
