[package]
name = "gobley-fixture-ext-types-uniffi-one"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# The name of this library is `uniffi_one` in upstream. Add the kmm_ prefix here
# to prevent potential name conflict when UniFFI tries to find the target by
# its name.
name = "kmm_uniffi_one"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../../build-common" }
